[package]
name = "dorian"
version = "0.2.0"
edition = "2021"
authors = ["Alex Watson <alex@coded.cc>"]
description = "A game development project, for fun"
repository = "https://github.com/alexwatever/dorian"
readme = "README.md"

[dependencies]
bevy = "0.15.0"
chrono = { version = "0.4.42", features = ["serde"] }
parse-display = "0.10.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]

# Uncomment this to get faster compile times during development
[features]
dev = ["bevy/dynamic_linking"]

[profile.dev.package."*"]
# Enable optimizations for dependencies in debug builds
opt-level = 3 

[lints.rust]
unsafe_code = "forbid"
unused-features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unstable_features = "warn"
